<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="110dp"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/text_profile_subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent"
        android:text="@string/text_profile_subtitle_1"
        android:textSize="24dp"/>
    <View
        android:id="@+id/divider_subtitle1_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_profile_subtitle1"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:id="@+id/text_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/text_user"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/text_user"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_top"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_pwd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_user"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_password"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_user"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/text_password_hide"/>
    <TextView
        android:id="@+id/text_names_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_pwd"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_names"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_pwd"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_lastnames_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_names"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_lastnames"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_lastnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_names"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_doctype_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_lastnames"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_doctype"
        android:textColor="@color/colorAccent"/>
    <Spinner
        android:id="@+id/text_doctype"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_lastnames"
        app:layout_constraintStart_toEndOf="@id/guideline" />
    <TextView
        android:id="@+id/text_docnumber_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_doctype"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_docnumber"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_docnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_doctype"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_docnumber"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_phone"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_docnumber"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_phone"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_email"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_phone"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_address"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_reference_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_address"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_reference"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/text_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_address"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>