<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewcontrollers.activities.SpecialistViewActivity"
    tools:showIn="@layout/activity_specialist_view">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="100dp"
        android:orientation="vertical"/>
    <Button
        android:id="@+id/button_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_contact_button"
        android:backgroundTint="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_profile_subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/button_contact"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent"
        android:text="@string/text_profile_spec_subtitle1"
        android:textSize="24dp"/>
    <View
        android:id="@+id/divider_subtitle1_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_profile_subtitle1"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:id="@+id/text_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_top"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_rate"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_top"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_company_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_rate_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_company_name"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_rate_label"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_company_name_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_description"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_company_name_label"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"
        android:maxLines="3"/>
    <TextView
        android:id="@+id/text_profile_subtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_description_label"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent"
        android:text="@string/text_profile_spec_subtitle2"
        android:textSize="24dp"/>
    <View
        android:id="@+id/divider_subtitle2_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_profile_subtitle2"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:id="@+id/text_rate_service_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/divider_subtitle2_top"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_rate"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_rate_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/divider_subtitle2_top"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_rate_service_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_user"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_rate_service_label"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <TextView
        android:id="@+id/text_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_user_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_state"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/text_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_user_label"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:text="@string/mock_text"/>
    <Button
        android:id="@+id/button_moreSpecDeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/text_state_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_more_services_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>