<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".viewcontrollers.fragments.ProfileFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="110dp"
            android:orientation="vertical"/>
        <Button
            android:id="@+id/button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_favorites_button"
            android:backgroundTint="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_profile_subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/button_favorites"
            app:layout_constraintBottom_toTopOf="@id/divider_subtitle1_top"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAccent"
            android:text="@string/text_profile_subtitle_1"
            android:textSize="24dp"/>
        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/button_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_edit_black_24dp"/>
        <View
            android:id="@+id/divider_subtitle1_top"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/button_edit"
            android:background="?android:attr/listDivider"/>
        <TextView
            android:id="@+id/text_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_top"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_rate"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_top"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_rate_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/text_user"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_rate_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_user_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_password"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_user_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/text_password_hide"/>
        <TextView
            android:id="@+id/text_names_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_pwd_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_names"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_pwd_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_lastnames_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_names_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_lastnames"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_lastnames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_names_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_doctype_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_lastnames_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Tipo Cliente"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_doctype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_lastnames_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="1"/>
        <TextView
            android:id="@+id/text_docnumber_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_doctype_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_docnumber"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_docnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_doctype_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_docnumber_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_phone"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_docnumber_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_phone_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_email"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_phone_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_email_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_address"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_email_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <TextView
            android:id="@+id/text_reference_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_address_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_reference"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/text_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_address_label"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:text="@string/mock_text"/>
        <View
            android:id="@+id/divider_subtitle1_bottom"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_reference_label"
            android:background="?android:attr/listDivider"/>
        <TextView
            android:id="@+id/text_profile_subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/divider_subtitle1_bottom"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAccent"
            android:text="@string/text_profile_subtitle2"
            android:textSize="24dp"/>
        <View
            android:id="@+id/divider_subtitle2_top"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/text_profile_subtitle2"
            android:background="?android:attr/listDivider"/>
        <TextView
            android:id="@+id/text_notification_new_comment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/divider_subtitle2_top"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_notification_new_comment"/>
        <Switch
            android:id="@+id/switch_notification_new_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/divider_subtitle2_top"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>